# wirerope

./: .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  release.yml
docs/: conf.py  index.rst  wirerope.rst
tests/: test_callable.py  test_wire.py  test_wirerope.py
wirerope/: __init__.py  callable.py  rope.py  wire.py
