[metadata]
name = wirerope
version = 0.4.3
url = https://github.com/youknowone/wirerope
author = Jeong YunWon
author_email = wirerope@youknowone.org
classifier =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = BSD 2-Clause License
license_file = LICENSE
description = 'Turn functions and methods into fully controllable objects'
long_description = file: README.rst
keywords = ring,methodtools,hack,method
[options]
packages = wirerope
install_requires=
    six>=1.11.0
    inspect2>=0.1.0;python_version<"3"
    singledispatch>=3.4.0.3;python_version<"3.4"
[options.extras_require]
test =
    pytest==4.6.7
    pytest-cov==2.6.1
doc =
    sphinx

[tool:pytest]
addopts=--verbose --cov-config .coveragerc --cov wirerope
python_files = tests/test_*.py
norecursedirs=.git py ci
[flake8]
ignore=E701
